--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@
 # next.js
 /.next/
 /out/
+/.open-next/
+
+# wrangler
+/.wrangler/
 
 # production
 /build
@@ -42,3 +46,5 @@ next-env.d.ts
 
 # trae
 .trae
+prompt.md
+req.http
