--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "setup-db": "node scripts/setup-database.js"
+    "setup-neon-db": "node scripts/setup-neon-database.js",
+    "drop-neon-db": "node scripts/drop-neon-database.js",
+    "reset-neon-db": "pnpm drop-neon-db && pnpm setup-neon-db"
   },
   "dependencies": {
     "@stripe/react-stripe-js": "^3.7.0",
@@ -17,11 +19,11 @@
     "cookie": "^1.0.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
-    "next": "15.3.4",
+    "next": "15.4.5",
     "nuqs": "^2.4.3",
     "pg": "^8.16.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "sonner": "^2.0.6",
     "stripe": "^18.3.0"
   },
@@ -32,12 +34,18 @@
     "@types/cookie": "^1.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.1.9",
+    "@types/react-dom": "19.1.7",
     "eslint": "^9",
-    "eslint-config-next": "15.3.4",
+    "eslint-config-next": "15.4.5",
     "kanel": "^3.14.1",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.1.9",
+      "@types/react-dom": "19.1.7"
+    }
   }
 }
