--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,10 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-.env*
+.env
+.env.production
+.env.local
+.env.*.local
 
 # vercel
 .vercel
@@ -48,3 +51,6 @@ next-env.d.ts
 .trae
 prompt.md
 req.http
+
+# deployment
+deployment.log
