--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Production
+name: Deploy
 
 on:
   workflow_run:
@@ -10,7 +10,7 @@ on:
 
 jobs:
   deploy:
-    name: Deploy E-Commerce to VPS
+    name: Deploy Production
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
 
