--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,6 @@
 /node_modules
 /.pnp
 .pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
 
 # testing
 /coverage
@@ -29,9 +24,6 @@
 *.pem
 
 # debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
@@ -40,17 +32,18 @@ yarn-error.log*
 .env.local
 .env.*.local
 
-# vercel
-.vercel
-
 # typescript
 *.tsbuildinfo
 next-env.d.ts
 
-# trae
-.trae
 prompt.md
 req.http
 
 # deployment
 deployment.log
+
+# claude settings
+.claude/*
+
+# vscode
+.vscode/*
