perf: implement ISR and caching - Enable ISR with 5-min revalidation on homepage - Add in-memory exchange rate cache (1-hour TTL) - Add Cache-Control headers to /api/products

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ NEXT_PUBLIC_BASE_URL=http://localhost:3000
 #CDN
 NEXT_PUBLIC_CDN_URL=https://cdn.andripurnomo.com/e-commerce
 
+NEXT_PUBLIC_DISABLE_WEB_VITALS_LOG=true
+
 # Database Configuration
 POSTGRES_USER=xxx
 POSTGRES_PASSWORD=xxx
