--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
     "next": "15.4.10",
+    "next-intl": "^4.7.0",
     "nuqs": "^2.4.3",
     "pg": "^8.16.3",
     "react": "19.1.1",
