--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
       test:
         [
           "CMD-SHELL",
-          'node -e "require(''http'').get(''http://localhost:3002/api/products'', (r) => process.exit(r.statusCode === 200 ? 0 : 1))"',
+          'node -e "require(''http'').get(''http://localhost:3002/api/health'', (r) => process.exit(r.statusCode === 200 ? 0 : 1))"',
         ]
       interval: 10s
       timeout: 5s
