--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "db:setup": "node scripts/setup-database.mjs",
     "db:drop": "node scripts/drop-database.mjs",
-    "db:reset": "pnpm db:drop && pnpm db:setup"
+    "db:reset": "pnpm db:drop && pnpm db:setup",
+    "db:generate": "kanel && node scripts/generate-zod-schemas.mjs"
   },
   "dependencies": {
     "@stripe/react-stripe-js": "^3.7.0",
@@ -28,7 +29,8 @@
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "sonner": "^2.0.6",
-    "stripe": "^18.3.0"
+    "stripe": "^18.3.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -43,6 +45,7 @@
     "eslint-config-next": "15.4.5",
     "kanel": "^3.14.1",
     "tailwindcss": "^4",
+    "ts-to-zod": "^5.1.0",
     "typescript": "^5"
   },
   "pnpm": {
