chore: integrate type-checking into lint workflow
- Add TypeScript type-checking to lint script
- Add standalone type-check command for validation
- Ensure translation type safety is enforced in CI/CD

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint && tsc --noEmit",
+    "type-check": "tsc --noEmit",
     "db:setup": "node scripts/setup-database.mjs",
     "db:drop": "node scripts/drop-database.mjs",
     "db:reset": "pnpm db:drop && pnpm db:setup",
