--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "db:generate": "kanel && node scripts/generate-zod-schemas.mjs"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.4.0",
     "@types/pg": "^8.15.4",
@@ -29,6 +30,7 @@
     "pg": "^8.16.3",
     "react": "19.1.1",
     "react-dom": "19.1.1",
+    "react-hook-form": "^7.71.1",
     "sonner": "^2.0.6",
     "stripe": "^18.3.0",
     "zod": "^4.3.6"
